--- a/base.css
+++ b/base.css
@@ -2,3 +2,33 @@
 base stylesheet
 */
 @charset "UTF-8";
+html{
+    background-color: #faedb7;
+}
+p{
+    text-indent: 2em;
+}
+body{
+    width: 1200px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    border:solid 1px #a52a2a;
+}
+.title{
+    text-align: center;
+}
+.left-nav{
+    position: fixed;
+    top:calc(50% - 90px);
+    left:20px;
+}
+.left-nav a{
+    display: block;
+    padding: 20px;
+}
+.part{
+    width:100%;
+    height: 600px;
+    box-sizing: border-box;
+    border:solid 1px #a52a2a;
+}
